Initial commit with working app - Starting point for Thursday

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hotColdReactRedux",
+  "name": "hotColdReactReduxShaySofia",
   "version": "1.0.0",
   "description": "",
   "main": "dev/js/index.js",
