--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-addons-update": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0"
   }
 }
